:wrench: refacto des gros composants et ajout des jours feriés